--- a/src/components/pages/login.html
+++ b/src/components/pages/login.html
@@ -72,7 +72,7 @@
             data-client_id="794752247490-dspn67dppujlm4gupbidvpqah08runh2.apps.googleusercontent.com"
             data-context="signin"
             data-ux_mode="popup"
-            data-login_uri="http://localhost:5500/src/components/pages/login.html"
+            data-login_uri="https://ma-driftype.netlify.app/src/components/pages/login.html"
             data-callback="handleGoogleSignIn"
             data-auto_prompt="false"
           ></div>
